category and child category

--- a/templates/admin/nav.html
+++ b/templates/admin/nav.html
@@ -101,24 +101,30 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'sub_category' %}">
+                            <span class="menu-title">Sub Category</span>
+                            <i class="mdi mdi-format-list-bulleted menu-icon"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'child_category' %}">
+                            <span class="menu-title">Child Category</span>
+                            <i class="mdi mdi-format-list-bulleted menu-icon"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'template' %}">
                             <span class="menu-title">Templates</span>
                             <i class="mdi mdi-chart-bar menu-icon"></i>
                         </a>
                     </li>
                     
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span class="menu-title">Users</span>
-                            <i class="mdi mdi-format-list-bulleted menu-icon"></i>
-                        </a>
-                    </li>
+                    
                     <li class="nav-item sidebar-actions">
                         <span class="nav-link">
-                            <div class="border-bottom">
-                                <h6 class="font-weight-normal mb-3"></h6>
-                            </div>
-                            <button class="btn btn-block btn-lg btn-gradient-primary mt-4">+ Add a Template</button>
+                            <a href="{% url 'add_template' %}">
+                            <button class="btn btn-block btn-lg btn-gradient-primary mt-4">+ Add Template</button>
+                        </a>
                         </span>
                     </li>
                 </ul>
