--- a/templates/admin/add_template.html
+++ b/templates/admin/add_template.html
@@ -20,9 +20,9 @@
               <div class="form-group row">
                 <label class="col-sm-3 col-form-label">Category</label>
                 <div class="col-sm-9">
-                  <select class="form-control">
+                  <select class="form-control" name="category">
                     {% for cat in cat %}
-                    <option>{{cat.category}}</option>
+                    <option value="{{cat.id}}">{{cat.category}}</option>
                     {% endfor %}
                   </select>
                 </div>
@@ -74,7 +74,7 @@
               <div class="form-group">
                 <label for="exampleInputPassword1">Template Price</label>
                 <input
-                  type="text"
+                  type="number"
                   class="form-control"
                   placeholder="Template Price"
                   required
@@ -105,7 +105,7 @@
               <div class="form-group">
                 <label for="exampleInputPassword1">Template URL</label>
                 <input
-                  type="text"
+                  type="url"
                   class="form-control"
                   placeholder="Template URL"
                   required
@@ -128,7 +128,7 @@
               <button type="submit" class="btn btn-gradient-primary me-2">
                 Submit
               </button>
-              <button class="btn btn-light">Cancel</button>
+              
             </form>
           </div>
         </div>
