--- a/templates/admin/sub_category.html
+++ b/templates/admin/sub_category.html
@@ -4,35 +4,33 @@
     <div class="col-lg-12 grid-margin stretch-card">
         <div class="card">
           <div class="card-body">
-            <h4 class="card-title">Category</h4>
-       
+            <h4 class="card-title">Sub Category</h4>
             <table class="table table-striped">
               <thead>
                 <tr>
-                  <th> Icon</th>
-                  <th> Category Name</th>
+                  <th> Category</th>
+                  <th> Sub Category</th>
                   <th> Status </th>
                   <th> Order</th>
                   <th>Date Added</th>
                 </tr>
               </thead>
               <tbody>
-                {% for category in category %}
+                {% for sub_category in sub_category %}
                 <tr>
                   <td class="py-1">
-                    <img src="{{category.category_image.url}}" alt="image" />
-
+                    {{sub_category.category}}
                   </td>
-                  <td>{{category.category}} </td>
+                  <td>{{sub_category.sub_category}} </td>
                   <td>
-                    {% if category.status == 0 %}
+                    {% if sub_category.status == 0 %}
                     inactive
                     {% else %}
                     active
                     {% endif %}
                   </td>
-                  <td> {{category.order}}</td>
-                  <td>{{category.created.date}}</td>
+                  <td> {{sub_category.order}}</td>
+                  <td>{{sub_category.created.date}}</td>
                 </tr>
                 {% endfor %}
               </tbody>
@@ -41,8 +39,8 @@
         </div>
       </div>
       <span class="nav-link">
-        <a href="{% url 'add_category' %}">
-        <button class="btn btn-block btn-lg btn-gradient-primary mt-4">+ Add Category</button>
+        <a href="{% url 'add_sub_category' %}">
+        <button class="btn btn-block btn-lg btn-gradient-primary mt-4">+ Add Sub Category</button>
     </a>
     </span>
 </div>
