--- a/templates/admin/template.html
+++ b/templates/admin/template.html
@@ -11,10 +11,13 @@
               <thead>
                 <tr>
                   <th> Category</th>
+                  <th> Sub Category</th>
+                  <th> Child Category</th>
                   <th> Template Name</th>
                   <th> Price </th>
                   <th> Frameworks</th>
                   <th>Template Link</th>
+                  <th>Date Added</th>
                   
                 </tr>
               </thead>
@@ -22,12 +25,37 @@
                 {% for template in template %}
                 <tr>
                   <td>{{template.category}} </td>
+                  {% if template.sub_category %}
+                  <td>{{template.sub_category}} </td>
+                  {% else %}
+                  <td>--</td>
+                  {% endif %}
+
+
+
+                  {% if template.child_category %}
+                  <td>{{template.child_category}} </td>
+                  {% else %}
+                  <td>--</td>
+                  {% endif %}
+
+                
+
+
                   <td>{{template.template_name}} </td>
                   <td>
                     Rs.{{template.template_price}}
                   </td>
                   <td> {{template.framework}}</td>
+
+                  {% if template.template_url %}
                   <td><a href="{{template.template_url}}" target="_blank">Live Preview</a></td>
+                  {% else %}
+                  <td>--</td>
+                  {% endif %}
+
+
+                  <td> {{template.created.date}}</td>
                 </tr>
                 {% endfor %}
               </tbody>
