--- a/templates/admin/add_template.html
+++ b/templates/admin/add_template.html
@@ -27,6 +27,34 @@
                   </select>
                 </div>
               </div>
+
+              <div class="form-group row">
+                <label class="col-sm-3 col-form-label">Sub Category</label>
+                <div class="col-sm-9">
+                  <select class="form-control" name="category">
+                    {% for sub_cat in sub_cat %}
+                    <option value="{{sub_cat.id}}">
+                      {{sub_cat.sub_category}}
+                    </option>
+                    {% endfor %}
+                  </select>
+                </div>
+              </div>
+
+
+              <div class="form-group row">
+                <label class="col-sm-3 col-form-label">Child Category</label>
+                <div class="col-sm-9">
+                  <select class="form-control" name="category">
+                    {% for child_cat in child_cat %}
+                    <option value="{{child_cat.id}}">
+                      {{child_cat.child_category}}
+                    </option>
+                    {% endfor %}
+                  </select>
+                </div>
+              </div>
+
               <div class="form-group">
                 <label for="exampleInputEmail1">Template Name</label>
                 <input
