--- a/templates/admin/category.html
+++ b/templates/admin/category.html
@@ -14,6 +14,7 @@
                   <th> Status </th>
                   <th> Order</th>
                   <th>Date Added</th>
+                  <th>Action</th>
                 </tr>
               </thead>
               <tbody>
@@ -33,6 +34,7 @@
                   </td>
                   <td> {{category.order}}</td>
                   <td>{{category.created.date}}</td>
+                  <td><a href=""> Edit</a></td>
                 </tr>
                 {% endfor %}
               </tbody>
