--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -45,7 +45,7 @@
                         <h4 class="font-weight-normal mb-3">Total Templates <i
                                 class="mdi mdi-diamond mdi-24px float-right"></i>
                         </h4>
-                        <h2 class="mb-5">955</h2>
+                        <h2 class="mb-5">{{templates_ct}}</h2>
 
                     </div>
                 </div>
