--- a/templates/admin/sub_category.html
+++ b/templates/admin/sub_category.html
@@ -13,6 +13,7 @@
                   <th> Status </th>
                   <th> Order</th>
                   <th>Date Added</th>
+                  <th>Action</th>
                 </tr>
               </thead>
               <tbody>
@@ -31,6 +32,7 @@
                   </td>
                   <td> {{sub_category.order}}</td>
                   <td>{{sub_category.created.date}}</td>
+                  <td><a href=""> Edit</a></td>
                 </tr>
                 {% endfor %}
               </tbody>
