--- a/templates/admin/child_category.html
+++ b/templates/admin/child_category.html
@@ -14,6 +14,7 @@
                             <th> Status </th>
                             <th> Order</th>
                             <th>Date Added</th>
+                            <th>Action</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -31,6 +32,7 @@
                             </td>
                             <td> {{child_category.order}}</td>
                             <td>{{child_category.created.date}}</td>
+                            <td><a href=""> Edit</a></td>
                         </tr>
                         {% endfor %}
                     </tbody>
