--- a/templates/admin/template.html
+++ b/templates/admin/template.html
@@ -18,6 +18,7 @@
                   <th> Frameworks</th>
                   <th>Template Link</th>
                   <th>Date Added</th>
+                  <th>Action</th>
                   
                 </tr>
               </thead>
@@ -56,6 +57,7 @@
 
 
                   <td> {{template.created.date}}</td>
+                  <td><a href="{% url 'edit_template' id=template.id %}"> Edit</a></td>
                 </tr>
                 {% endfor %}
               </tbody>
