--- a/templates/admin/add_child_category.html
+++ b/templates/admin/add_child_category.html
@@ -11,14 +11,25 @@
               class="forms-sample"
               action="{% url 'add_child_category' %}"
               method="post"
+              {%
+              comment
+              %}
               enctype="multipart/form-data"
+              {%
+              endcomment
+              %}
             >
               {% csrf_token %}
               <div class="form-group row">
                 <label class="col-sm-3 col-form-label">Category</label>
                 <div class="col-sm-9">
-                  <select class="form-control" name="category">
+                  <select
+                    class="form-control"
+                    name="category"
+                    id="catageory_select"
+                  >
                     {% for cat in cat %}
+
                     <option value="{{cat.id}}">{{cat.category}}</option>
                     {% endfor %}
                   </select>
