--- a/templates/admin/load_child_category.html
+++ b/templates/admin/load_child_category.html
@@ -1,4 +1,4 @@
 <option value="">--Select--</option>
-{% for sub_cat in sub_cat %}
-<option value="{{sub_cat.id}}">{{sub_cat.sub_category}}</option>
+{% for child_cat in child_cat %}
+<option value="{{child_cat.id}}">{{child_cat.child_category}}</option>
 {% endfor %}
