--- a/templates/admin/add_template.html
+++ b/templates/admin/add_template.html
@@ -14,24 +14,43 @@
               enctype="multipart/form-data"
             >
               {% csrf_token %}
-                
 
-
+              <!-- category -->
               <div class="form-group row">
                 <label class="col-sm-3 col-form-label">Category</label>
                 <div class="col-sm-9">
-                  <select class="form-control" name="category">
+                  <select class="form-control" name="category" id="catageory_select" data-sub-category-url="{% url 'load_sub_category' %}"  >
+                    <option value="">--Select--</option>
                     {% for cat in cat %}
                     <option value="{{cat.id}}">{{cat.category}}</option>
                     {% endfor %}
                   </select>
                 </div>
               </div>
+              <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+              <script>
+                $("#catageory_select").change(function () {
+                  var url = $("#catageory_select").attr("data-sub-category-url"); 
+                  var cat = $(this).val();
+                  $.ajax({
+                    url: url, 
+                    data: {
+                      cat: cat,
+                    },
+                    success: function (data) {
+                      $("#id_sub_category").html(data);
+                    },
+                  });
+                //https://simpleisbetterthancomplex.com/tutorial/2018/01/29/how-to-implement-dependent-or-chained-dropdown-list-with-django.html  
+                });
+              </script>
 
+<!-- sub category  -->
               <div class="form-group row">
                 <label class="col-sm-3 col-form-label">Sub Category</label>
                 <div class="col-sm-9">
-                  <select class="form-control" name="category">
+                  <select class="form-control" name="category" id="id_sub_category" data-child-category-url = "{% url 'load_child_category' %}" >
+                  <option value="">--Select--</option>
                     {% for sub_cat in sub_cat %}
                     <option value="{{sub_cat.id}}">
                       {{sub_cat.sub_category}}
@@ -40,12 +59,29 @@
                   </select>
                 </div>
               </div>
+              <script>
+                $("#id_sub_category").change(function () {
+                  var url = $("#id_sub_category").attr("data-child-category-url"); 
+                  var sub_cat = $(this).val();
+                  $.ajax({
+                    url: url, 
+                    data: {
+                      sub_cat: sub_cat,
+                    },
+                    success: function (data) {
+                      $("#id_child_category").html(data);
+                    },
+                  });
+                //https://simpleisbetterthancomplex.com/tutorial/2018/01/29/how-to-implement-dependent-or-chained-dropdown-list-with-django.html  
+                });
+              </script>
 
-
+<!-- child category -->
               <div class="form-group row">
                 <label class="col-sm-3 col-form-label">Child Category</label>
                 <div class="col-sm-9">
-                  <select class="form-control" name="category">
+                  <select class="form-control" name="category" id ="id_child_category">
+                    <option value="">--Select--</option>
                     {% for child_cat in child_cat %}
                     <option value="{{child_cat.id}}">
                       {{child_cat.child_category}}
