--- a/templates/admin/template.html
+++ b/templates/admin/template.html
@@ -16,7 +16,7 @@
                   <th> Child Category</th>
                   
                   <th> Price </th>
-                  <th> Frameworks</th>
+                  <th> Featured</th>
                   <th>Template Link</th>
                   <th>Date Added</th>
                   <th>Action</th>
@@ -50,7 +50,7 @@
                   <td>
                     Rs.{{template.template_price}}
                   </td>
-                  <td> {{template.framework}}</td>
+                  <td> {{template.is_featured}}</td>
 
                   {% if template.template_url %}
                   <td><a href="{{template.template_url}}" target="_blank">Live Preview</a></td>
