--- a/templates/admin/add_category.html
+++ b/templates/admin/add_category.html
@@ -18,9 +18,14 @@
                   <label for="exampleInputEmail1">Order</label>
                   <input type="number" class="form-control" id="exampleInputEmail1" placeholder="Order" name="order" required>
                 </div>
-                <div class="form-group">
-                  <label for="exampleInputEmail1">Status</label>
-                  <input type="number" class="form-control" id="exampleInputEmail1" placeholder="Status" name="status" required>
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Status</label>
+                  <div class="col-sm-9">
+                    <select class="form-control" name="status">
+                    <option value="active">Active</option>
+                    <option value="inactive">Inactive</option>
+                    </select>
+                  </div>
                 </div>
                 <div class="form-group">
                   <label>Category Image</label>
