--- a/templates/admin/add_child_category.html
+++ b/templates/admin/add_child_category.html
@@ -77,15 +77,13 @@
                 />
               </div>
               <div class="form-group">
-                <label for="exampleInputEmail1">Status</label>
-                <input
-                  type="number"
-                  class="form-control"
-                  id="exampleInputEmail1"
-                  placeholder="Status"
-                  name="status"
-                  required
-                />
+                <label class="col-sm-3 col-form-label">Status</label>
+                <div class="col-sm-9">
+                  <select class="form-control" name="status">
+                  <option value="active">Active</option>
+                  <option value="inactive">Inactive</option>
+                  </select>
+                </div>
               </div>
               <div class="form-group">
                 <label for="exampleInputEmail1">Child category</label>
