--- a/templates/admin/edit_template.html
+++ b/templates/admin/edit_template.html
@@ -14,46 +14,101 @@
               enctype="multipart/form-data"
             >
               {% csrf_token %}
-                
 
-
+              <!-- category -->
               <div class="form-group row">
                 <label class="col-sm-3 col-form-label">Category</label>
                 <div class="col-sm-9">
-                  <select class="form-control" name="category">
+                  <select
+                    class="form-control"
+                    name="category"
+                    id="catageory_select"
+                    data-sub-category-url="{% url 'load_sub_category' %}"
+                  >
+                    <option value="">--Select--</option>
                     {% for cat in cat %}
-                    <option value="{{cat.id}}">{{cat.category}}</option>
+
+                    <option value="{{cat.id}}" {% if cat.id == template_data.category.id %} selected {% endif %}>{{cat.category}}</option>
                     {% endfor %}
                   </select>
                 </div>
               </div>
+              <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+              <script>
+                $("#catageory_select").change(function () {
+                  var url = $("#catageory_select").attr(
+                    "data-sub-category-url"
+                  );
+                  var cat = $(this).val();
+                  $.ajax({
+                    url: url,
+                    data: {
+                      cat: cat,
+                    },
+                    success: function (data) {
+                      $("#id_sub_category").html(data);
+                    },
+                  });
+                  //https://simpleisbetterthancomplex.com/tutorial/2018/01/29/how-to-implement-dependent-or-chained-dropdown-list-with-django.html
+                });
+              </script>
 
+              <!-- sub category  -->
               <div class="form-group row">
                 <label class="col-sm-3 col-form-label">Sub Category</label>
                 <div class="col-sm-9">
-                  <select class="form-control" name="sub_category">
+                  <select
+                    class="form-control"
+                    name="sub_category"
+                    id="id_sub_category"
+                    data-child-category-url="{% url 'load_child_category' %}"
+                  >
+                    <option value="">--Select--</option>
                     {% for sub_cat in sub_cat %}
-                    <option value="{{sub_cat.id}}">
+                    <option value="{{sub_cat.id}}" {% if sub_cat.id == template_data.sub_category.id %} selected {% endif %}>
                       {{sub_cat.sub_category}}
                     </option>
                     {% endfor %}
                   </select>
                 </div>
               </div>
+              <script>
+                $("#id_sub_category").change(function () {
+                  var url = $("#id_sub_category").attr(
+                    "data-child-category-url"
+                  );
+                  var sub_cat = $(this).val();
+                  $.ajax({
+                    url: url,
+                    data: {
+                      sub_cat: sub_cat,
+                    },
+                    success: function (data) {
+                      $("#id_child_category").html(data);
+                    },
+                  });
+                  //https://simpleisbetterthancomplex.com/tutorial/2018/01/29/how-to-implement-dependent-or-chained-dropdown-list-with-django.html
+                });
+              </script>
 
-
+              <!-- child category -->
               <div class="form-group row">
                 <label class="col-sm-3 col-form-label">Child Category</label>
                 <div class="col-sm-9">
-                  <select class="form-control" name="child_category">
+                  <select
+                    class="form-control"
+                    name="child_category"
+                    id="id_child_category"
+                  >
+                    <option value="">--Select--</option>
                     {% for child_cat in child_cat %}
-                    <option value="{{child_cat.id}}">
+                    <option value="{{child_cat.id}}" {% if child_cat.id == template_data.child_category.id %} selected {% endif %}>
                       {{child_cat.child_category}}
                     </option>
                     {% endfor %}
                   </select>
                 </div>
-              </div> 
+              </div>
 
               <div class="form-group">
                 <label for="exampleInputEmail1">Template Name</label>
@@ -148,10 +203,20 @@
                   name="template_url"
                 />
               </div>
+              <div class="form-group">
+                <label>Template Image</label>
+                <div class="input-group col-xs-12">
+                  <input
+                    type="file"
+                    class="form-control file-upload-info"
+                    placeholder="Upload Image"
+                    name="template_image"
+                  />
+                </div>
+              </div>
               <button type="submit" class="btn btn-gradient-primary me-2">
                 Submit
               </button>
-              
             </form>
           </div>
         </div>
