--- a/templates/header.html
+++ b/templates/header.html
@@ -1,245 +1,259 @@
-{% load static %}
-{% include 'nav.html' %}
+{% load static %} {% include 'nav.html' %}
 <!-- header area start -->
 {% for message in messages %}
 <div class="popup-msg">
   <p class="popup-msg-text">{{message}}</p>
-  <i class="fa fa-times popup-close"></i>
+  <!-- <i class="fa fa-times popup-close"></i> -->
 </div>
 {% endfor %}
 <style>
-.popup-msg {
-  display: flex;
-  justify-content: space-between;
-  position: absolute;
-  transform: translateX(-50%);
-  top: 8%;
-  left: 50%;
-  width: calc(max-content + 50px);
-  padding: 1.3rem;
-  border-radius: 10px;
-  border: 1.3px solid gray;
-  color: rgb(0, 0, 0);
-  box-shadow: 3px 4px 12px 0px rgba(0, 0, 0, 0.3);
-}
-.popup-close {
-  margin-left: 10px;
-  color: #cc0000;
-  cursor: pointer;
-}
+  .popup-msg {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    transform: translateX(-50%);
+    top: 8%;
+    left: 50%;
+    width: calc(max-content + 50px);
+    padding: 1.3rem;
+    border-radius: 10px;
+    border: 1.3px solid gray;
+    color: rgb(0, 0, 0);
+    box-shadow: 3px 4px 12px 0px rgba(0, 0, 0, 0.3);
+  }
+
 </style>
 
 <script>
-   let popup = document.querySelector(".popup-msg-text");
-   let popupCloser = document.querySelector(".popup-close");
-   popupCloser.addEventListener("click", () => {
-   popup.parentNode.parentNode.removeChild(
-   popup.parentNode
-   );
-   });
+  let popup = document.querySelector(".popup-msg");
+  
+console.log(popup,"popup");
+if (popup){
+   setTimeout(() => {
+      popup.style.display="none"
+   }, 3000);
+}
 </script>
 
 <header>
-    <div class="header__area white-bg" id="header-sticky">
-       <div class="container">
-          <div class="row align-items-center">
-             <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-4 col-6">
-                <div class="logo">
-                   <a href="{% url 'home' %}">
-                   <img src="{% static 'assets/img/logo/logo.png' %}" alt="logo">
-                   </a>
-                </div>
-             </div>
-             <div class="col-xxl-8 col-xl-8 col-lg-8 d-none d-lg-block">
-                <div class="main-menu">
-                   <nav id="mobile-menu">
-                      <ul>
-                         <li><a href="{% url 'home' %}">Home</a></li>
-
-                         <li><a href="{% url 'theme' %}">Themes</a></li>
-
-                         <li><a href="#">HTML</a></li>
-
-                         <li><a href="#">Support</a></li>
-
-                         <li><a href="#">About</a></li>
-                         
-                         <li><a href="#">Blog</a></li>
-
-                         <li><a href="{% url 'contact' %}">Contact</a></li>
-                      </ul>
-                   </nav>
-                </div>
-             </div>
-             <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-8 col-6">
-                <div class="header__action d-flex align-items-center justify-content-end">
-                   <div class="header__login d-none d-sm-block">
-                      <a href="{% url 'login' %}"><i class="far fa-unlock"></i> Log In</a>
-                   </div>
-                   <div class="header__cart d-none d-sm-block">
-                      <a href="javascript:void(0);" class="cart-toggle-btn">
-                         <i class="far fa-shopping-cart"></i>
-                         <span>3</span>
-                      </a>
-                   </div>
-                   <div class="sidebar__menu d-lg-none">
-                      <div class="sidebar-toggle-btn" id="sidebar-toggle">
-                          <span class="line"></span>
-                          <span class="line"></span>
-                          <span class="line"></span>
-                      </div>
-                  </div>
-                </div>
-             </div>
+  <div class="header__area white-bg" id="header-sticky">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-4 col-6">
+          <div class="logo">
+            <a href="{% url 'home' %}">
+              <img src="{% static 'assets/img/logo/logo.png' %}" alt="logo" />
+            </a>
           </div>
-       </div>
+        </div>
+        <div class="col-xxl-8 col-xl-8 col-lg-8 d-none d-lg-block">
+          <div class="main-menu">
+            <nav id="mobile-menu">
+              <ul>
+                <li><a href="{% url 'home' %}">Home</a></li>
+
+                <li><a href="{% url 'theme' %}">Themes</a></li>
+
+                <li><a href="#">HTML</a></li>
+
+                <li><a href="#">Support</a></li>
+
+                <li><a href="#">About</a></li>
+
+                <li><a href="#">Blog</a></li>
+
+                <li><a href="{% url 'contact' %}">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-8 col-6">
+          <div
+            class="header__action d-flex align-items-center justify-content-end"
+          >
+            <div class="header__login d-none d-sm-block">
+              <a href="{% url 'login' %}"
+                ><i class="far fa-unlock"></i> Log In</a
+              >
+            </div>
+            <div class="header__cart d-none d-sm-block">
+              <a href="javascript:void(0);" class="cart-toggle-btn">
+                <i class="far fa-shopping-cart"></i>
+                <span>3</span>
+              </a>
+            </div>
+            <div class="sidebar__menu d-lg-none">
+              <div class="sidebar-toggle-btn" id="sidebar-toggle">
+                <span class="line"></span>
+                <span class="line"></span>
+                <span class="line"></span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </header>
- <!-- header area end -->
+<!-- header area end -->
 
- <!-- pre loader area start -->
+<!-- pre loader area start -->
 <div id="loading">
-    <div id="loading-center">
-       <div id="loading-center-absolute">
-          <div class="object" id="object_one"></div>
-          <div class="object" id="object_two" style="left:20px;"></div>
-          <div class="object" id="object_three" style="left:40px;"></div>
-          <div class="object" id="object_four" style="left:60px;"></div>
-          <div class="object" id="object_five" style="left:80px;"></div>
-       </div>
-    </div>  
+  <div id="loading-center">
+    <div id="loading-center-absolute">
+      <div class="object" id="object_one"></div>
+      <div class="object" id="object_two" style="left: 20px"></div>
+      <div class="object" id="object_three" style="left: 40px"></div>
+      <div class="object" id="object_four" style="left: 60px"></div>
+      <div class="object" id="object_five" style="left: 80px"></div>
+    </div>
+  </div>
 </div>
- <!-- pre loader area end -->
+<!-- pre loader area end -->
 
- <!-- back to top start -->
+<!-- back to top start -->
 <div class="progress-wrap">
-    <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
-       <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
-    </svg>
+  <svg
+    class="progress-circle svg-content"
+    width="100%"
+    height="100%"
+    viewBox="-1 -1 102 102"
+  >
+    <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
+  </svg>
 </div>
- <!-- back to top end -->
+<!-- back to top end -->
 
-  <!-- cart mini area start -->
+<!-- cart mini area start -->
 <div class="cartmini__area">
-<div class="cartmini__wrapper">
-   <div class="cartmini__title">
+  <div class="cartmini__wrapper">
+    <div class="cartmini__title">
       <h4>Shopping cart</h4>
-   </div>
-   <div class="cartmini__close">
-      <button type="button" class="cartmini__close-btn"><i class="fal fa-times"></i></button>
-   </div>
-   <div class="cartmini__widget">
+    </div>
+    <div class="cartmini__close">
+      <button type="button" class="cartmini__close-btn">
+        <i class="fal fa-times"></i>
+      </button>
+    </div>
+    <div class="cartmini__widget">
       <div class="cartmini__inner">
-         <ul>
-            <li>
-               <div class="cartmini__thumb">
-                  <a href="product-details.html">
-                  <img src="assets/img/product/sm/cart-5.jpg" alt="">
-                  </a>
-               </div>
-               <div class="cartmini__content">
-                  <h5><a href="product-details.html">Findup - Directory & Listing</a></h5>
-                  <div class="product-quantity mt-10 mb-10">
-                     <span class="cart-minus">-</span>
-                     <input class="cart-input" type="text" value="1"/>
-                     <span class="cart-plus">+</span>
-                  </div>
-                  <div class="product__sm-price-wrapper">
-                     <span>2 <i class="fal fa-times"></i></span>
-                     <span class="product__sm-price">$24.00</span>
-                  </div>
-               </div>
-               <a href="#" class="cartmini__del"><i class="fal fa-times"></i></a>
-            </li>
-            <li>
-               <div class="cartmini__thumb">
-                  <a href="product-details.html">
-                  <img src="assets/img/product/sm/cart-2.jpg" alt="">
-                  </a>
-               </div>
-               <div class="cartmini__content">
-                  <h5><a href="product-details.html">TechBuzz - Businesses Agency</a></h5>
-                  <div class="product-quantity mt-10 mb-10">
-                     <span class="cart-minus">-</span>
-                     <input class="cart-input" type="text" value="1"/>
-                     <span class="cart-plus">+</span>
-                  </div>
-                  <div class="product__sm-price-wrapper">
-                     <span>1 <i class="fal fa-times"></i></span>
-                     <span class="product__sm-price">$17.00</span>
-                  </div>
-               </div>
-               <a href="#" class="cartmini__del"><i class="fal fa-times"></i></a>
-            </li>
-            <li>
-               <div class="cartmini__thumb">
-                  <a href="product-details.html">
-                  <img src="assets/img/product/sm/cart-3.jpg" alt="">
-                  </a>
-               </div>
-               <div class="cartmini__content">
-                  <h5><a href="product-details.html">Zibber - Agency Template</a></h5>
-                  <div class="product-quantity mt-10 mb-10">
-                     <span class="cart-minus">-</span>
-                     <input class="cart-input" type="text" value="1"/>
-                     <span class="cart-plus">+</span>
-                  </div>
-                  <div class="product__sm-price-wrapper">
-                     <span>5 <i class="fal fa-times"></i></span>
-                     <span class="product__sm-price">$72.00</span>
-                  </div>
-               </div>
-               <a href="#" class="cartmini__del"><i class="fal fa-times"></i></a>
-            </li>
-         </ul>
+        <ul>
+          <li>
+            <div class="cartmini__thumb">
+              <a href="product-details.html">
+                <img src="assets/img/product/sm/cart-5.jpg" alt="" />
+              </a>
+            </div>
+            <div class="cartmini__content">
+              <h5>
+                <a href="product-details.html">Findup - Directory & Listing</a>
+              </h5>
+              <div class="product-quantity mt-10 mb-10">
+                <span class="cart-minus">-</span>
+                <input class="cart-input" type="text" value="1" />
+                <span class="cart-plus">+</span>
+              </div>
+              <div class="product__sm-price-wrapper">
+                <span>2 <i class="fal fa-times"></i></span>
+                <span class="product__sm-price">$24.00</span>
+              </div>
+            </div>
+            <a href="#" class="cartmini__del"><i class="fal fa-times"></i></a>
+          </li>
+          <li>
+            <div class="cartmini__thumb">
+              <a href="product-details.html">
+                <img src="assets/img/product/sm/cart-2.jpg" alt="" />
+              </a>
+            </div>
+            <div class="cartmini__content">
+              <h5>
+                <a href="product-details.html">TechBuzz - Businesses Agency</a>
+              </h5>
+              <div class="product-quantity mt-10 mb-10">
+                <span class="cart-minus">-</span>
+                <input class="cart-input" type="text" value="1" />
+                <span class="cart-plus">+</span>
+              </div>
+              <div class="product__sm-price-wrapper">
+                <span>1 <i class="fal fa-times"></i></span>
+                <span class="product__sm-price">$17.00</span>
+              </div>
+            </div>
+            <a href="#" class="cartmini__del"><i class="fal fa-times"></i></a>
+          </li>
+          <li>
+            <div class="cartmini__thumb">
+              <a href="product-details.html">
+                <img src="assets/img/product/sm/cart-3.jpg" alt="" />
+              </a>
+            </div>
+            <div class="cartmini__content">
+              <h5>
+                <a href="product-details.html">Zibber - Agency Template</a>
+              </h5>
+              <div class="product-quantity mt-10 mb-10">
+                <span class="cart-minus">-</span>
+                <input class="cart-input" type="text" value="1" />
+                <span class="cart-plus">+</span>
+              </div>
+              <div class="product__sm-price-wrapper">
+                <span>5 <i class="fal fa-times"></i></span>
+                <span class="product__sm-price">$72.00</span>
+              </div>
+            </div>
+            <a href="#" class="cartmini__del"><i class="fal fa-times"></i></a>
+          </li>
+        </ul>
       </div>
       <div class="cartmini__checkout">
-         <div class="cartmini__checkout-title mb-30">
-            <h4>Subtotal:</h4>
-            <span>$113.00</span>
-         </div>
-         <div class="cartmini__checkout-btn">
-            <a href="#" class="m-btn m-btn-border mb-10 w-100"> <span></span> view cart</a>
-            <a href="#" class="m-btn m-btn-3 w-100"> <span></span> checkout</a>
-         </div>
+        <div class="cartmini__checkout-title mb-30">
+          <h4>Subtotal:</h4>
+          <span>$113.00</span>
+        </div>
+        <div class="cartmini__checkout-btn">
+          <a href="#" class="m-btn m-btn-border mb-10 w-100">
+            <span></span> view cart</a
+          >
+          <a href="#" class="m-btn m-btn-3 w-100"> <span></span> checkout</a>
+        </div>
       </div>
-   </div>
-</div>
+    </div>
+  </div>
 </div>
 <div class="body-overlay"></div>
 <!-- cart mini area end -->
 
-
 <!-- sidebar area start -->
 <div class="sidebar__area">
-   <div class="sidebar__wrapper">
-      <div class="sidebar__close">
-         <button class="sidebar__close-btn" id="sidebar__close-btn">
-         <span><i class="fal fa-times"></i></span>
-         <span>close</span>
-         </button>
+  <div class="sidebar__wrapper">
+    <div class="sidebar__close">
+      <button class="sidebar__close-btn" id="sidebar__close-btn">
+        <span><i class="fal fa-times"></i></span>
+        <span>close</span>
+      </button>
+    </div>
+    <div class="sidebar__content">
+      <div class="logo mb-40">
+        <a href="index.html">
+          <img src="assets/img/logo/logo-white.png" alt="logo" />
+        </a>
       </div>
-      <div class="sidebar__content">
-         <div class="logo mb-40">
-            <a href="index.html">
-            <img src="assets/img/logo/logo-white.png" alt="logo">
-            </a>
-         </div>
-         <div class="mobile-menu"></div>
-         <div class="sidebar__action mt-330">
-            <div class="sidebar__login mt-15">
-               <a href="#"><i class="far fa-unlock"></i> Log In</a>
-            </div>
-            <div class="sidebar__cart mt-20">
-               <a href="javascript:void(0);" class="cart-toggle-btn">
-                  <i class="far fa-shopping-cart"></i>
-                  <span>2</span>
-               </a>
-            </div>
-         </div>
+      <div class="mobile-menu"></div>
+      <div class="sidebar__action mt-330">
+        <div class="sidebar__login mt-15">
+          <a href="#"><i class="far fa-unlock"></i> Log In</a>
+        </div>
+        <div class="sidebar__cart mt-20">
+          <a href="javascript:void(0);" class="cart-toggle-btn">
+            <i class="far fa-shopping-cart"></i>
+            <span>2</span>
+          </a>
+        </div>
       </div>
-   </div>
+    </div>
+  </div>
 </div>
-<!-- sidebar area end -->      
+<!-- sidebar area end -->
 <div class="body-overlay"></div>
 <!-- sidebar area end -->
